# paper2saas

./: .env  .env.example  ARTIFACTS_GUIDE.md  README.md  my_os.py  paper2saas.py  pyproject.toml  report_2512_24991v1.md
.letta/: settings.json  settings.local.json
agent-ui/: .gitignore  package.json
agent-ui/src/: store.ts
agent-ui/src/app/: layout.tsx
agent-ui/src/components/chat/ChatArea/: ChatArea.tsx
agent-ui/src/components/chat/Sidebar/: EntitySelector.tsx  ModeSelector.tsx  Sidebar.tsx
agent-ui/src/components/ui/: ErrorBoundary.tsx  dropdown-menu.tsx
agent-ui/src/hooks/: useChatActions.ts
agent-ui/src/lib/: artifactDetection.ts  exportUtils.ts
agent-ui/src/types/: artifacts.ts
app/: config.py  main.py  utils.py
app/agents/: devils_advocate.py  fact_checker.py  idea_generator.py  market_researcher.py  market_skeptic.py  paper_analyzer.py  product_engineer.py  report_generator.py  strategic_advisor.py  validation_researcher.py
app/prompts/: agents.py
app/teams/: paper2saas.py  roaster.py
paper2saas_app/: config.py  main.py  models.py  models_config.py  utils.py
paper2saas_app/agents/: code_architect.py  deployment_specialist.py  devils_advocate.py  fact_checker.py  fullstack_engineer.py  idea_generator.py  market_researcher.py  market_skeptic.py  paper_analyzer.py  product_engineer.py  qa_engineer.py  report_generator.py  strategic_advisor.py  validation_researcher.py
paper2saas_app/prompts/: agents.py  implementation_agents.py
paper2saas_app/teams/: implementation.py  paper2saas.py  roaster.py
tmp/: paper2saas.db
(+9 files in other folders)
